--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
       <version>1.7.5</version>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>org.zaproxy</groupId>
+      <artifactId>clientapi</artifactId>
+      <version>2.7</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
